# programowanie_w_pythonie

./: .gitignore  requirements.txt
pl_wm_zad2/: README.md  setup.cfg
pl_wm_zad2/chase/: __main__.py  sheep.py  simulation.py
zadanie_2/: CHANGELOG.md  main.py  pos.json  save_to_file  save_to_file.py  sheep.py  simulation.py  wolf.py
zadanie_2/chase/: save_to_file.py
zadanie_2/tests/: test_wolf.py
zadanie_4/: data_analyzer.py  main.py  reader.py
zadanie_4/data/: README.txt
