[metadata]
name = chase-plwmzad2
version = 1.0.0
author = Przemysław Lis, Wojciech Majchrzak
description = symulacja wilk i owce
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = chase
python_requires = >=3.6
